--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".LoginActivity"/>
         <activity android:name=".ProfileInputActivity"/>
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
