튜토리얼 추가 (처음 유저정보 입력 후 1회만 보임)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".LoginActivity"/>
         <activity android:name=".ProfileInputActivity"/>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".PollActivity"/>
+        <activity android:name=".TutorialActivity"/>
     </application>
 
 </manifest>
