퀴즈 다 푼 후 '나를 선택한 사람' 보여주기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".ProfileInputActivity"/>
         <activity android:name=".PollActivity"/>
         <activity android:name=".TutorialActivity"/>
+        <activity android:name=".HeartListActivity"/>
     </application>
 
 </manifest>
